--- a/my-project/mkdocs.yml
+++ b/my-project/mkdocs.yml
@@ -1,1 +1,28 @@
-site_name: My Docs
+site_name: mycoolwebsite
+site_url: https://mkdocs-vidlet-hosting.readthedocs.io/
+repo_name: <jose-sanchez>/<mkdocs-vidlet-hosting>
+edit_uri: ""
+
+# change directory names here
+docs_dir: docs
+site_dir: site
+
+theme: mkdocs
+  # the next 2 lines are required to tuse the DIB version
+
+
+# pretty colors! see https://squidfunk.github.io/mkdocs-material/getting-started/#primary-colors
+palett:
+  primary: 'blue'
+  accent: 'blue'
+
+#give a title for each page
+
+nav:
+    - Home: index.md
+    - Vidlets: vidletpage.md
+
+
+
+  
+
